--- a/src/components/banner/Banner.css
+++ b/src/components/banner/Banner.css
@@ -1,15 +1,22 @@
-#banner{
-    background-image: url("slide1.jpg");
-    height: 500px;
-    background-size: cover;
+.slider img{
+    width: 100%;
+    height: 100%;
+}.contenido{
+    width: 100%;
+    height: 100%;
+    position: relative;
+}#textosl p{
+    position: absolute;
+    margin-top: -16%;
+    font-family: 'Marcellus', serif;
+    font-size: 3rem;
+    background-color: rgba(29, 21, 21, 0.274);
+    color: white;
+    width: 50%;
+    height: 37%;
     display: flex;
-    align-items: flex-end;
-}
+    justify-content: space-between;
+    align-items: center;
+    flex-flow: row wrap;
 
-#banner h4{
-    color: var(--blanco);
-    background-color: rgba(0, 0, 0, 0.4);
-    width: 55%;
-    padding: 1rem;
-    font-size: 2rem;
 }
