--- a/src/components/dashboard/formulario.css
+++ b/src/components/dashboard/formulario.css
@@ -1,7 +1,20 @@
+@import url('https://fonts.googleapis.com/css2?family=Marcellus&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+:root{
+  --azulclaro: #48D6ED;
+  --azuloscuro: #337AB7;
+  --azulnegro: #303342;
+  --negro: #333333;
+  --negro2: #000;
+  --gris: #B2B3B3;
+  --fondo: #FFFEFC;
+  --verdeazul: #157A8A;
+  --Magenta: #9C2759;
+  --blanco: #fff;
+  --degradado: linear-gradient(49.54deg, #337AB7 2.89%, #0B3860 80.34%);
+}
 .datos{   
-    background: url(../dashboard/hotels.jpg);
+    background: url(../dashboard/habitacion.jpeg);
     background-size: cover;
-    height: 1007px;
     display: flex;
    
 }.logo-img{
@@ -16,7 +29,7 @@
     height: 90%;
 }.form img{
     width: 20%;
-}.titulo{
+}.tituloFormulario{
     display: flex;
     justify-content: center;
     margin-top: 2%;
