--- a/hotelia/src/Components/descripcion/Descripcion.css
+++ b/hotelia/src/Components/descripcion/Descripcion.css
@@ -1,20 +1,132 @@
-#descripcion{
+.informacion{
+      
+    width: 100%;
+    height: 100%;  
     display: flex;
-    padding: 5rem;
+    justify-content: space-around;  
+
+}.text-log{
+    margin: 2.2em;
+    display: flex;
+    justify-content: space-around;
     align-items: center;
-    justify-content:space-between;
-}
-
-.text-descripcion{
-    flex-basis: 70%;
+}#hijo1{
+    font-size: 1.4em;
+    width: 65%;
     
+}#hijo img{
+    width: 65%;
+    height: 65%;
+}#hijo{     
+    display: flex;
+    justify-content: center;
 }
 
-.img-descripcion{
-    flex-basis: 30%;
-    text-align: center;
+
+
+
+/* resolucion desktop*/
+@media screen and (min-width: 1025px){
+    .logo i{
+          display: none;
+    }
+    .menu hr{
+          display: none;
+    }.text.t hr{
+          display: none;
+    }.text.t2 hr{
+          display: none;
+    }.features-title{
+          font-size: 2em;
+    }#textosl p{
+          font-size: 2.6em;
+      }
+  }
+/*Resolucion media tablet*/
+@media screen and (min-width: 680px) and (max-width: 1024px) {
+
+    .logo i{
+          display: none;
+    }
+    .menu hr{
+          display: none;
+    }.text.t hr{
+          display: none;
+    }.text.t2 hr{
+          display: none;
+    }#op{
+          width: 30%;
+    }.ip{
+          font-size: 1em;
+      }.footer-container{
+          font-size: 0.8em;
+      }nav{
+          font-size: 1.2em;
+      }#textosl p{
+          font-size: 1.5em;
+      }
 }
 
-.img-descripcion img{
-    width: 50%;
+/* Resoluciòn Mobile*/
+@media screen and (min-width:320px) and (max-width: 679px) {
+    
+  #hijo1 {
+      width: 100%;
+      font-size: 1em;
+  }
+}
+
+
+
+
+
+/* resolucion desktop*/
+@media screen and (min-width: 1025px){
+    .logo i{
+          display: none;
+    }
+    .menu hr{
+          display: none;
+    }.text.t hr{
+          display: none;
+    }.text.t2 hr{
+          display: none;
+    }.features-title{
+          font-size: 2em;
+    }#textosl p{
+          font-size: 2.6em;
+      }
+  }
+/*Resolucion media tablet*/
+@media screen and (min-width: 680px) and (max-width: 1024px) {
+
+    .logo i{
+          display: none;
+    }
+    .menu hr{
+          display: none;
+    }.text.t hr{
+          display: none;
+    }.text.t2 hr{
+          display: none;
+    }#op{
+          width: 30%;
+    }.ip{
+          font-size: 1em;
+      }.footer-container{
+          font-size: 0.8em;
+      }nav{
+          font-size: 1.2em;
+      }#textosl p{
+          font-size: 1.5em;
+          width: 20em;
+      }
+}
+
+/* Resoluciòn Mobile*/
+@media screen and (min-width:320px) and (max-width: 679px) { 
+  textosl p {
+      font-size: 1.2em;
+      width: 10em;
+  }
 }
