--- a/hotelia/src/Components/feature/Feature.css
+++ b/hotelia/src/Components/feature/Feature.css
@@ -1,21 +1,94 @@
-#feature{
-    background-image: url("bg-features.png");
-    color: var(--blanco);
-    padding: 1.5rem 0;
-}
+#features{
+    background: url(./bg-features.png);
+    background-size: cover;
+    color: white;
+    padding-top: 1rem;
+    width: 100%;
 
-#feature h2{
+   
+}.features-title{
+    background-color: rgba(0, 0, 0, 0.281);
     text-align: center;
-    font-size: 2rem;
-    background-color: rgba(0, 0, 0, 0.4);
     padding: 0.5rem;
-    font-weight: 400;
-    text-shadow: 3px 3px 3px #000000;
+    font-size: 1.5rem;
+}.features-description{
+    
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+}.feature{
+    min-width: 180px;
+    margin: 0.8rem;
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-radius: 5px;
+}.feature i{
+    font-size: 2.2rem;
+}.feature-blue{
+    background-color: rgba(9, 53, 104, 0.493);
+}.feature-black{
+    background-color: rgba(0, 0, 0, 0.699);
+}.logo{
+    background-color: #333333;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1rem;
 }
 
-.feature-row{
-    display: flex;
-    justify-content: space-around;
-    margin-top: 1rem;
-    
+
+/* resolucion desktop*/
+@media screen and (min-width: 1025px){
+    .logo i{
+          display: none;
+    }
+    .menu hr{
+          display: none;
+    }.text.t hr{
+          display: none;
+    }.text.t2 hr{
+          display: none;
+    }.features-title{
+          font-size: 2em;
+    }#textosl p{
+          font-size: 2.6em;
+      }
+  }
+/*Resolucion media tablet*/
+@media screen and (min-width: 680px) and (max-width: 1024px) {
+
+    .logo i{
+          display: none;
+    }
+    .menu hr{
+          display: none;
+    }.text.t hr{
+          display: none;
+    }.text.t2 hr{
+          display: none;
+    }#op{
+          width: 30%;
+    }.ip{
+          font-size: 1em;
+      }.footer-container{
+          font-size: 0.8em;
+      }nav{
+          font-size: 1.2em;
+      }#textosl p{
+          font-size: 1.5em;
+      }
+}
+
+/* Resoluciòn Mobile*/
+@media screen and (min-width:320px) and (max-width: 679px) {
+  .features-title {
+      background-color: rgba(0, 0, 0, 0.281);
+      text-align: center;
+      font-size: 1.2rem;
+  }.feature i {
+      font-size: 2rem;      
+  }
 }
