--- a/hotelia/src/Components/css-registro/Registro.css
+++ b/hotelia/src/Components/css-registro/Registro.css
@@ -30,7 +30,7 @@
     grid-template-columns:  repeat(30, 1fr); 
     grid-template-rows: repeat(51, 19.75px);
    
-}.logo{
+}.logoRegi{
     background-color: #003564b0;
     grid-column: 1/9;
     grid-row: 1/52;
@@ -120,7 +120,7 @@
 /*movil*/
 @media screen and (min-width: 320px) and (max-width: 620px){
    
-    .logo{
+    .logoRegi{
         background-color: #05498579;
         grid-column: 1/51;
         grid-row: 3/10;
