--- a/src/components/banner/Banner.css
+++ b/src/components/banner/Banner.css
@@ -1,3 +1,10 @@
+.logo{
+    background-color: #333333;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1rem;
+}
 .slider img{
     width: 100%;
     height: 100%;
