--- a/hotelia/src/Components/css-login/Login.css
+++ b/hotelia/src/Components/css-login/Login.css
@@ -210,7 +210,7 @@ p
         border-radius: 2px;
         box-shadow: 0px 1px rgba(97, 97, 97,500);
     }
-    p{
+    .pLogi{
         display: none;
     }form{
     width: 75%;
@@ -280,7 +280,7 @@ p
         background-color: var(--negro2);
         width: 100%;
         font-family: 'Marcellus', serif;        
-    }p{
+    }.pLogi{
       font-size: 1em;
     }
 }
