--- a/hotelia/src/Components/footer/Footer.css
+++ b/hotelia/src/Components/footer/Footer.css
@@ -16,7 +16,7 @@
   display: flex;
   align-items: center;
 }
-.text.t{
+.textt{
     width: 25%;
 
     
@@ -27,7 +27,7 @@
     display: flex; 
     justify-content: space-between;
 
-}.text t3 {
+}.textt3 {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -44,9 +44,9 @@
     }
     .menu hr{
           display: none;
-    }.text.t hr{
+    }.textt hr{
           display: none;
-    }.text.t2 hr{
+    }.textt2 hr{
           display: none;
     }.features-title{
           font-size: 2em;
@@ -62,9 +62,9 @@
     }
     .menu hr{
           display: none;
-    }.text.t hr{
+    }.textt hr{
           display: none;
-    }.text.t2 hr{
+    }.textt2 hr{
           display: none;
     }#op{
           width: 30%;
@@ -145,11 +145,11 @@
       }.text-footer{
           display: flex;
           flex-direction: column;
-      }.text.t{
+      }.textt{
           width: 100%;
-      }.text.t2{
+      }.textt2{
           width: 100%;
-      }.text.t3{
+      }.textt3{
           display: flex;
           flex-direction: row;
           justify-content: space-between;
