--- a/hotelia/src/Components/Error/Error.css
+++ b/hotelia/src/Components/Error/Error.css
@@ -3,7 +3,7 @@
 *{
       margin:0;
 }
-.container{
+.containerEr{
       width: 100vw;
       height: 100vh;
       background: rgb(4,87,128);
@@ -33,7 +33,7 @@
 }
 
 @media screen and (min-width: 320px) {
-      .container{
+      .containerEr{
             width: 100vw;
             height: 100vh;
             background: rgb(4,87,128);
@@ -54,7 +54,7 @@
 
 }
 @media screen and (min-width: 600px) and (max-width: 1023px) {
-      container{
+      .containerEr{
             width: 100vw;
             height: 100vh;
             background: rgb(4,87,128);
