--- a/hotelia/src/Components/css-registro/Registro.css
+++ b/hotelia/src/Components/css-registro/Registro.css
@@ -23,7 +23,7 @@
  
   h1,h2,h3,h4,h5{
     font-family: 'Marcellus', serif;
-}#container-grid{
+}.container-grid{
     background:url(./hotels.jpg);
     background-size: cover;
     display: grid;
@@ -33,11 +33,11 @@
 }.logoRegi{
     background-color: #003564b0;
     grid-column: 1/9;
-    grid-row: 1/52;
+    grid-row: 1/53;
 }.formulario{
     background-color: rgba(255, 255, 255, 0.651);
     grid-column: 10/30;
-    grid-row: 3/ 50;
+    grid-row: 3/ 53;
     border-radius: 14px;
 }.img img{
     width: 80%;
@@ -71,6 +71,7 @@
     font-size: 1.5em;
  
 }.radio{
+    
     font-size: 0.9em;
 }.doc{
     display: flex;
@@ -87,7 +88,11 @@
 }.orig{
     display: flex;
     justify-content: space-around;
-}.contraRegi{
+}.TipoU{
+    display: flex;
+    margin-left: 6vh;
+}
+.contraRegi{
     display: flex;
     justify-content: space-around;
 }.terminos{
@@ -95,12 +100,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-}#inf{
+}.inf{
     width: 40%;
     margin-top: 2%;
     display: flex;
     flex-direction: column;
-}#inf .inputsRegistro, select{
+}.inf .inputsRegistro, select{
     margin-top: 2%;
     height: 2.2em;
 }.terminos a{
@@ -165,7 +170,7 @@
         
         display: flex;
         flex-direction: column;
-    }#inf{
+    }.inf{
         width: 80%;
         margin-left: 10%;
     }.form{
